Bestellung abgeben für einen Käufer

--- a/htdocs/cms/data/modules/content_customer_edit/lang/lang_de_DE.txt
+++ b/htdocs/cms/data/modules/content_customer_edit/lang/lang_de_DE.txt
@@ -3,6 +3,6 @@ LABEL_CITY=Ort
 LABEL_CUSTOMERNR=Kundennr.
 LABEL_FAX=Fax
 LABEL_IMAGE=Bild
-LABEL_NAME=Zusatzinfo
+LABEL_NAME=Name
 LABEL_PHONENUMBER=Telefon
 LABEL_POSTALCODE=Postleitzeil
